--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
 name: Build Android APK
-
 on:
   push:
     branches: [ main ]
@@ -9,8 +8,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Updated to v4 (Latest version)
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Build with Buildozer
         uses: ArtemSBulgakov/buildozer-action@v1
@@ -19,8 +19,9 @@ jobs:
           command: buildozer android debug
           buildozer_version: stable
 
+      # Updated to v4 (Fixes the "deprecated" error)
       - name: Upload APK
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: package
           path: bin/*.apk
