--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,18 +8,45 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Updated to v4 (Latest version)
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1
-        id: buildozer
+      # 1. Install Java 17 (Required for modern Android builds)
+      - name: Set up Java
+        uses: actions/setup-java@v4
         with:
-          command: buildozer android debug
-          buildozer_version: stable
+          distribution: 'temurin'
+          java-version: '17'
 
-      # Updated to v4 (Fixes the "deprecated" error)
+      # 2. Set up Python
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      # 3. Install System Dependencies (The tools Buildozer needs)
+      - name: Install System Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            git zip unzip autoconf libtool pkg-config \
+            libncurses5-dev libncursesw5-dev libtinfo5 \
+            libffi-dev libssl-dev build-essential \
+            libltdl-dev zlib1g-dev
+
+      # 4. Install Buildozer
+      - name: Install Buildozer
+        run: |
+          pip install --upgrade pip
+          pip install buildozer cython==0.29.33
+
+      # 5. Run the Build (Yes, we clean first to be safe)
+      - name: Build with Buildozer
+        run: |
+          buildozer android clean
+          yes | buildozer android debug
+
+      # 6. Upload the APK
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
