Fix exit code 100 by installing libtinfo5

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,30 +5,32 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 1. Java 17 is REQUIRED for current Android SDKs
+      # 1. Set up Java 17 (Required)
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      # 2. Set up Python
+      # 2. Set up Python 3.10
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      # 3. Install System Dependencies
+      # 3. FIX: Install missing 'libtinfo5' manually
       - name: Install System Dependencies
         run: |
+          sudo add-apt-repository universe
           sudo apt-get update
-          sudo apt-get install -y             build-essential git zip unzip autoconf libtool pkg-config             libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev             libssl-dev zlib1g-dev
+          sudo apt-get install -y libncurses5 libtinfo5
+          sudo apt-get install -y build-essential git zip unzip autoconf libtool pkg-config zlib1g-dev cmake libffi-dev libssl-dev
 
       # 4. Install Buildozer
       - name: Install Buildozer
@@ -36,25 +38,12 @@ jobs:
           pip install --upgrade pip
           pip install buildozer cython==0.29.33
 
-      # 5. PRE-INSTALL SDK & ACCEPT LICENSES (The Magic Step)
-      # We let Buildozer download the SDK first, then we force-accept licenses.
-      - name: Pre-install SDK and Accept Licenses
-        run: |
-          # Run buildozer init just to trigger SDK download, then kill it? No, simpler:
-          # We just run the build command but expect it might fail on license first try
-          # actually, let's use the standard android tool approach:
-          mkdir -p ~/.buildozer/android/platform/android-sdk/cmdline-tools
-          
-      # 6. Run Buildozer (With the 'yes' pipe as backup)
+      # 5. Build (Pre-accept licenses via 'yes' pipe)
       - name: Build with Buildozer
         run: |
-          # The 'yes' command is piped to buildozer to answer "y" to any prompts
           yes | buildozer android debug
-        env:
-          # This variable sometimes helps with headless builds
-          CI: true
 
-      # 7. Upload APK
+      # 6. Upload APK
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
